force-app/main/default/objects/Contact/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF( Inactive__c = false , IMAGE(&quot;/resource/Green&quot;, &quot;Green&quot;, 35, 40),
IF ( Inactive__c = true, IMAGE(&quot;/resource/Red&quot;, &quot;Red&quot;,35 ,40),&quot;Error&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Text</type>
</CustomField>