force-app/main/default/objects/Contact/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Account.BillingStreet &amp; &quot; &quot; &amp;
Account.BillingCity &amp; &quot; &quot; &amp;
Account.BillingState &amp; &quot; &quot; &amp;
Account.BillingPostalCode &amp; &quot; &quot; &amp;
Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>