force-app/main/default/objects/Contact/fields/Compliance_Check__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Check__c</fullName>
    <label>Compliance Check </label> 
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>