force-app/main/default/objects/Contact/fields/ContactQualified__c.field-meta.xml
<CustomField>
    <fullName>ContactQualified__c</fullName>
    <label>ContactQualified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>