force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department </label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controlling, Accounting, Finance</fullName>
            </value>
            <value>
                <fullName>Procurement, Material Economy</fullName>
            </value>
            <value>
                <fullName>Research &amp; Development</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Construction, Calculation</fullName>
            </value>
            <value>
                <fullName>Marketing, Product Management</fullName>
            </value>
            <value>
                <fullName>Metallurgy</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Quality Management</fullName>
            </value>
            <value>
                <fullName>Welding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Transport, Dispatch</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Board, Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>