force-app/main/default/objects/Contact/fields/MailingPermission__c.field-meta.xml
<CustomField>
    <fullName>MailingPermission__c</fullName>
    <label>Mailing Permission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (on paper),</fullName>
            </value>
            <value>
                <fullName>Yes (Double-Opt-In)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
                <default>true</default>
                <label>Outstanding</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>