force-app/main/default/objects/Contact/fields/Mailings__c.field-meta.xml
<CustomField>
    <fullName>Mailings__c</fullName>
    <label>Mailings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>bauma</fullName>
            </value>
            <value>
                <fullName>Green Steel</fullName>
            </value>
            <value>
                <fullName>EuroBLECH</fullName>
            </value>
            <value>
                <fullName>EuroBLECH - Evening Event</fullName>
            </value>
            <value>
                <fullName>Digital Christmas Card</fullName>
            </value>
            <value>
                <fullName>Engineering Day Steel Construction</fullName>
            </value>
            <value>
                <fullName>Dillinger Pressure Vessel Colloquium</fullName>
            </value>
            <value>
                <fullName>Made in Steel</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Wind Power</fullName>
            </value>
            <value>
                <fullName>Steel Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>