force-app/main/default/objects/Contact/fields/MobileNr__c.field-meta.xml
<CustomField>
    <fullName>MobileNr__c</fullName>
    <formula>MobilePhone</formula>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>