force-app/main/default/objects/Contact/fields/Segment2__c.field-meta.xml
<CustomField>
    <fullName>Segment2__c</fullName>
    <label>Segment 2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>