force-app/main/default/objects/Contact/fields/SuccessorCustomer__c.field-meta.xml
<CustomField>
    <fullName>SuccessorCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Predecessor Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>