force-app/main/default/objects/Contact/fields/SuitableforCustomerSurvey__c.field-meta.xml
<CustomField>
    <fullName>SuitableforCustomerSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suitable for Customer Survey</label>
    <type>Checkbox</type>
</CustomField>