force-app/main/default/objects/Contact/validationRules/AccountComplianceCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountComplianceCheck</fullName>
    <active>true</active>
    <errorConditionFormula>And(ISNEW() , OR(ISPICKVAL(Account.ComplianceCheck__c, &apos;Failed&apos;) ,
ISPICKVAL(Account.ComplianceCheck__c, &apos;Outstanding&apos;)),
$Profile.Name &lt;&gt; &quot;Systemadministrator&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;SHS Admin&quot;,
NOT($Setup.ByPassLogic__c.ByPassValidation__c))</errorConditionFormula>
    <errorMessage>The compliance check for the account has failed, therefore this function is not available.</errorMessage>
</ValidationRule>